Trying to get the gitignore to work

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 **/*.pyc
 **/__pycache__
 NeuralTransducerErrors/*
-SegmentationsSplits/!**.segmentations
-SharedTaskData/!**.dev
+SegmentationsSplits/!(*.segmentations)
+SharedTaskData/!(*.@(trn|dev|tst))
